replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/18_class_duplicate.su
// Expected error: SUT0141 — duplicate class declaration.

class Foo extends vector { }
class Foo extends int { }
